--- a/about.hbs
+++ b/about.hbs
@@ -6,7 +6,7 @@ into the {body} of the default.hbs template --}}
 {{> "header"}}
 
 <div id="banner-about-us" class="container-fluid">
-    <img src="{{asset "assets/about/feekaMain.png"}}" alt="company photo">
+    <img src="{{asset "assets/about/feekaMain.jpeg"}}" alt="company photo">
 </div>
 
 <main id="site-main" class="site-main outer about-us">
@@ -29,7 +29,7 @@ into the {body} of the default.hbs template --}}
             <div class="row teams-description" id="team-section-small">
                 <div class="col-lg-6 col-sm-12">
                     <div class="header-team">
-                        <img class="img-fluid" src="{{asset "assets/about/business/MESG.png"}}" alt="business-team">
+                        <img class="img-fluid" src="{{asset "assets/about/business/MESG.jpeg"}}" alt="business-team">
                         <h2>business</h2>
                     </div>
                     <div class="row members">
@@ -59,7 +59,7 @@ into the {body} of the default.hbs template --}}
 
                 <div class="col-lg-6 col-sm-12">
                     <div class="header-team" id="multimedia">
-                        <img class="img-fluid" src="{{asset "assets/about/multimedia/multimedia.png"}}"
+                        <img class="img-fluid" src="{{asset "assets/about/multimedia/multimedia.jpeg"}}"
                             alt="multimedia-team">
                         <h2>multimedia</h2>
                     </div>
@@ -98,7 +98,7 @@ into the {body} of the default.hbs template --}}
 
     <div id="team-flow" class="section teams dev">
         <div class="header-team">
-            <img src="{{asset "assets/about/flow/flow.png"}}" alt="flow-team">
+            <img src="{{asset "assets/about/flow/flow.jpeg"}}" alt="flow-team">
             <h2 class="team-name">dev team - <strong>Flow</strong></h2>
             <h3 class="team-project">Eletronic Failure Catalogue</h3>
         </div>
@@ -140,7 +140,7 @@ into the {body} of the default.hbs template --}}
 
     <div id="team-wisdom" class="section teams dev">
         <div class="header-team">
-            <img src="{{asset "assets/about/wisdom/Quaerere.png"}}" alt="wisdom-team">
+            <img src="{{asset "assets/about/wisdom/Quaerere.jpeg"}}" alt="wisdom-team">
             <h2 class="team-name">dev team - <strong>Wisdom</strong></h2>
             <h3 class="team-project">Quaerere</h3>
         </div>
@@ -190,7 +190,7 @@ into the {body} of the default.hbs template --}}
 
     <div id="team-vision" class="section teams dev">
         <div class="header-team">
-            <img src="{{asset "assets/about/vision/sonae.png"}}" alt="vision-team">
+            <img src="{{asset "assets/about/vision/sonae.jpeg"}}" alt="vision-team">
             <h2 class="team-name">dev team - <strong>Vision</strong></h2>
             <h3 class="team-project">Out-of-Stock</h3>
         </div>
@@ -235,7 +235,7 @@ into the {body} of the default.hbs template --}}
 
     <div id="team-live" class="section teams dev">
         <div class="header-team">
-            <img src="{{asset "assets/about/live/live.png"}}" alt="live-team">
+            <img src="{{asset "assets/about/live/live.jpeg"}}" alt="live-team">
             <h2 class="team-name">dev team - <strong>Live</strong></h2>
             <h3 class="team-project">zzapp</h3>
         </div>
