--- a/error-404.hbs
+++ b/error-404.hbs
@@ -3,7 +3,7 @@
 {{> "header"}}
 
 <div class="error-template site-wrapper">
-    <main id="site-main" class="site-main outer">
+    <main id="site-main" class="outer">
         <div class="inner">
             <section class="error-message">
                 <h1 class="error-code">{{code}}</h1>
@@ -14,7 +14,7 @@
 
         {{#get "posts" limit="2"}}
         <div class="inner">
-            <div class="post-feed-tag">
+            <div class="post-feed-tag error">
                 {{#foreach posts}}
                     {{> "post-card"}}
                 {{/foreach}}
