--- a/assets/sass/_ghost.scss
+++ b/assets/sass/_ghost.scss
@@ -770,6 +770,7 @@ figure.post-full-image {
 }
 
 .post-full-content a:hover {
+    color: $secondary-color !important;
     text-decoration: none;
 }
 
