--- a/default.hbs
+++ b/default.hbs
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
 
-                <img src="{{asset "assets/LogoFooter.png"}}">
+                <img src="{{asset "assets/images/LogoFooter.png"}}">
 
                 <div class="footer-contact text-wrap">
                     <h6>Contact</h6>
