--- a/index.hbs
+++ b/index.hbs
@@ -14,7 +14,7 @@ into the {body} of the default.hbs template --}}
                     solutions for innovative projects.</p>
             </div>
             <div class="col-lg-6 col-md-12 order-lg-2 order-1">
-                <img class="img-fluid" src="{{asset "assets/ilustracaoHero.png"}}" alt="hero illustration">
+                <img class="img-fluid" src="{{asset "assets/images/heroIllustration.png"}}" alt="hero illustration">
             </div>
         </div>
     </div>
@@ -33,7 +33,7 @@ into the {body} of the default.hbs template --}}
             <div class="row" id="about-cards">
                 <div class="col-lg-4 col-sm-12">
                     <div class="card">
-                        <img class="img-fluid" src="{{asset "assets/SoftwareEngineering.svg"}}" alt="software-image">
+                        <img class="img-fluid" src="{{asset "assets/images/SEIcon.png"}}" alt="software-image">
                         <div class="card-body">
                             <h5 class="card-title">Software Engineering</h5>
                             <p class="card-text">Software development with Agile methodology, focused on process
@@ -44,7 +44,7 @@ into the {body} of the default.hbs template --}}
                 </div>
                 <div class="col-lg-4 col-sm-12">
                     <div class="card">
-                        <img class="img-fluid" src="{{asset "assets/Business.svg"}}" alt="business-image">
+                        <img class="img-fluid" src="{{asset "assets/images/BusinessIcon.png"}}" alt="business-image">
                         <div class="card-body">
                             <h5 class="card-title">Business</h5>
                             <p class="card-text">Business management in model canvas, process mapping, key
@@ -55,7 +55,7 @@ into the {body} of the default.hbs template --}}
                 </div>
                 <div class="col-lg-4 col-sm-12">
                     <div class="card">
-                        <img class="img-fluid" src="{{asset "assets/Multimedia.svg"}}" alt="multimedia-image">
+                        <img class="img-fluid" src="{{asset "assets/images/MultimediaIcon.png"}}" alt="multimedia-image">
                         <div class="card-body">
                             <h5 class="card-title">Multimedia</h5>
                             <p class="card-text">Visual identities, illustration, animation, interfaces, user
@@ -76,7 +76,7 @@ into the {body} of the default.hbs template --}}
             <div class="row">
                 <div class="col-lg-6 col-md-12" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="img-fluid" src="{{asset "assets/Quaerere.svg"}}"></img>
+                    <img class="img-fluid" src="{{asset "assets/images/Quaerere.png"}}"></img>
                 </div>
                 <div class="col-lg-6 col-md-12 info" data-aos="fade-left" data-aos-offset="300"
                     data-aos-easing="ease-in-cubic" data-aos-duration="500">
@@ -85,7 +85,6 @@ into the {body} of the default.hbs template --}}
                         investing in innovative technology for teaching and in this project, students will be able
                         to learn with quizzes and tutorials as well as teachers with the possibility of planning the
                         lessons.</p>
-                    <button type="button" class="btn btn-primary">details</button>
                 </div>
             </div>
             <div class="row">
@@ -96,17 +95,16 @@ into the {body} of the default.hbs template --}}
                         empty shelves, in order to avoid the bad appearance created by the lack of exposed products.
                         The key point of the project was the use of machine learning as well as image analysis for
                         recognition of the products and their absence.</p>
-                    <button type="button" class="btn btn-primary">details</button>
                 </div>
                 <div class="col-lg-6 col-md-12 order-lg-2 order-1" data-aos="fade-left" data-aos-offset="300"
                     data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="img-fluid" src="{{asset "assets/Sonae.svg"}}"></img>
+                    <img class="img-fluid" src="{{asset "assets/images/Sonae.png"}}"></img>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-12" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="img-fluid" src="{{asset "assets/CriticalManuf.svg"}}"></img>
+                    <img class="img-fluid" src="{{asset "assets/images/Critical.png"}}"></img>
                 </div>
                 <div class="col-lg-6 col-md-12 info" data-aos="fade-left" data-aos-offset="300"
                     data-aos-easing="ease-in-cubic" data-aos-duration="500">
@@ -117,7 +115,6 @@ into the {body} of the default.hbs template --}}
                         errors/failures in which the worker can select by the machine or cell phone and then obtain
                         a list with a report of all the bugs that will be sent to the office later.
                     </p>
-                    <button type="button" class="btn btn-primary">details</button>
                 </div>
             </div>
             <div class="row">
@@ -129,11 +126,10 @@ into the {body} of the default.hbs template --}}
                         transmitting a particular sporting event. We developed the product in partnership with
                         ZeroZero that provided the necessary API for the execution of the project.
                     </p>
-                    <button type="button" class="btn btn-primary">details</button>
                 </div>
                 <div class="col-lg-6 col-md-12 order-lg-2 order-1" data-aos="fade-left" data-aos-offset="300"
                     data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="img-fluid" src="{{asset "assets/ZeroZero.svg"}}"></img>
+                    <img class="img-fluid" src="{{asset "assets/images/zzapp.png"}}"></img>
                 </div>
             </div>
         </div>
