--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="{{@site.url}}">
-            <img src="{{asset "assets/LogoHeader.png"}}" alt="feeka-logo">
+            <img src="{{asset "assets/images/LogoHeader.png"}}" alt="feeka-logo">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
