--- a/index.hbs
+++ b/index.hbs
@@ -25,7 +25,7 @@ into the {body} of the default.hbs template --}}
         <a id="About"></a>
         <div class="container">
             <h1>About Us</h1>
-            <p class="description">We are <b>feeka</b>, a Portuguese company that develops technological solutions
+            <p class="description">We are <span class="purple-bold">feeka</span>, a Portuguese company that develops technological solutions
                 focused on the client's opportunity with versatility, collaboration, innovation, and creativity. The
                 company, which started its work in 2019, has more than 30 employees and currently has partnerships
                 with companies Sonae BIT, Critical Manufacturing, ZOS Lda and Escola Global.</p>
