--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -21,6 +21,9 @@
                     <a class="nav-link" href="{{@site.url}}/#Projects">Projects</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{@site.url}}/team">Team</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{@site.url}}/blog">Blog</a>
                 </li>
                 <li class="nav-item contact">
