--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{@site.url}}/#">Home</a>
+                    <a class="nav-link" href="{{@site.url}}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{@site.url}}/about">About Us</a>
